fixed scrolling on filter sidebar to not cut off content

--- a/src/components/CatHistogram/CatHistogram.module.scss
+++ b/src/components/CatHistogram/CatHistogram.module.scss
@@ -9,7 +9,7 @@
     border: none;
     background: none;
     overflow-x: hidden;
-    width: 99% !important;
+    width: 100%;
 
     &:hover {
       background: var(--white-200);
